// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyleWrapper should be rendered 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100vh;
  width: 100vw;
}

<div
  className="c0"
/>
`;

exports[`StyledBanner should be rendered 1`] = `
.c0 {
  background-color: #f1f4fa;
  width: 70vw;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media (max-width:1024px) {
  .c0 {
    display: none;
  }
}

<div
  className="c0"
/>
`;

exports[`StyledContainer should be rendered 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 100%;
  height: 100%;
}

<div
  className="c0"
/>
`;

exports[`StyledFormContainer should be rendered 1`] = `
.c0 {
  width: 30vw;
  height: 100%;
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 0px 68px;
}

@media (max-width:1024px) {
  .c0 {
    width: 100vw;
    padding: 0px 30px;
  }
}

<div
  className="c0"
/>
`;
